# Ignat

./: README.md  ignat-bot.cabal  ignat.cabal  john.cabal  stack.yaml
src/: App.hs  Bot.hs  Main.hs  Markov.hs  Message.hs  MessageHandler.hs  Util.hs
src/Markov/: Markov.hs
