cabal-version:  2.0
name:           ignat-bot
version:        0.0.1
build-type:     Simple

executable RunIgnat
    default-language:   Haskell2010
    ghc-options:        -O2 -Wall -fno-warn-type-defaults -fno-warn-unused-record-wildcards -threaded
    hs-source-dirs:     src

    main-is:            Main.hs

    other-modules:      Util
                      , MessageHandler
                      , Markov
                      , App

    build-depends:      base
                      , text
                      , discord-haskell
                      , unliftio
                      , containers
                      , mtl
                      , random
